--- a/html/dev/scss/theme/_backend.scss
+++ b/html/dev/scss/theme/_backend.scss
@@ -307,3 +307,26 @@ header.show-for-large-up {
 		}	
 	}
 }
+
+/* -----------------------------------------
+   Backend Styles - Application
+----------------------------------------- */
+
+input.application-price {
+	padding-top: 20px;
+	font-size: 35px;
+	height: 60px;
+	width: 170px;
+	margin: auto;
+	text-align: center;
+}
+
+
+input.application-price:focus {
+	padding-top: 20px;
+	text-align: center;
+}
+
+.application-price::after {
+	content:"-";
+}
