--- a/html/dev/scss/theme/_general.scss
+++ b/html/dev/scss/theme/_general.scss
@@ -377,6 +377,10 @@ select:focus {
 	input[type=password], {
 		background: transparent;
 	}
+
+	ul li {
+		list-style: disc;
+	}
 }
 
 textarea[type=text] {
