--- a/html/dev/scss/theme/_backend.scss
+++ b/html/dev/scss/theme/_backend.scss
@@ -371,8 +371,6 @@ span.section-sum-time::after {
 	content:" Stunden";
 }
 
-
-
 td.application-table-heading {
 	font-weight: bold;
 	padding-bottom: 50px;
@@ -381,13 +379,16 @@ td.application-table-heading {
 }
 
 .application-final-result {
+	display: block;
 	width: 100%;
-	padding: 10px;
+	height: 100%;
+	padding-top: 10px;
+	font-size: 1.1em;
 
 	margin: 0px;
 	
-	i {
-		font-size: 2em;
+	.total-result-meta {
+		height: 20px;
 	}
 
 	span.counter-value {
@@ -399,14 +400,22 @@ td.application-table-heading {
 		content:" €";
 	}
 
-	span.total-effort {
+	span.total-effort, span.average-rate, span.mwst-part {
 		font-size: 1.1em;
 		color: white;
 	}
 
-	span.total-effort::after,  {
-		content:" Stunden";
-	}	
+	span.average-rate::before,  {
+		content:" (Ø ";
+	}
+
+	span.average-rate::after,  {
+		content:" € / Stunde)";
+}
+
+span.total-effort::after,  {
+	content:" Stunden";
+}	
 }
 
 .sticky-application-form {
@@ -417,7 +426,11 @@ td.application-table-heading {
 	bottom: 0;
 	width: 100%;
 	margin: 0;	
-	background-color: white;
+	background-color: $secondary-color;
+
+	@media only screen and (max-width: 60em) { 
+		position: relative;
+	}
 
 	.columns {
 		padding: 0px;
@@ -426,10 +439,11 @@ td.application-table-heading {
 	textarea, textarea:focus {
 		padding: 20px 30px 20px 30px;
 		margin: 0px;
-		max-height: 120px;
+		max-height: 135px;
 		border: 0px;
 		background: transparent;
 		overflow: auto;
+		background: white;
 	}
 }
 
@@ -442,8 +456,61 @@ td.application-table-heading {
 	}
 }
 
+.applicationsettings {
+	height: auto;
+	padding: 15px 0px 0px 0px;
+	color: white;
+	background-color: $secondary-color;
+	color: white;
 
+	input, input:focus {
+		margin: auto;
+		width: 70px;
+		background: $secondary-color;
+		color: white;
+		border-bottom: 2px solid white;
+		text-align: center;
+	}
 
+	input:focus {
+		border-bottom: 2px solid $primary-color;
+	}
+
+	.columns {
+		background-color: $secondary-color;
+		padding: 0;
+	}
+
+	.button {
+		margin-top: 10px;
+		width: 50%;
+		font-size: 0.8em;
+		padding: 8px;
+		text-transform: lowercase;
+	}
+
+	.method-change-buttons {
+		i {
+			font-size: 1.0em;
+			padding: 20px 7px 0px 7px;
+		}
+
+		a {
+			color: white;
+			opacity: 0.8;
+		}
+
+		a.active, a:hover {
+			color: $primary-color;
+		}
+	}
+}
+
+input.error, input.error:focus {
+	color: white;
+	border-color: red;
+	background:red;
+}
 /* -----------------------------------------
    Notification Styles
 ----------------------------------------- */
