--- a/html/dev/scss/theme/_backend.scss
+++ b/html/dev/scss/theme/_backend.scss
@@ -492,7 +492,7 @@ span.total-effort::after,  {
 	.method-change-buttons {
 		i {
 			font-size: 1.0em;
-			padding: 20px 7px 0px 7px;
+			padding: 20px 7px 10px 7px;
 		}
 
 		a {
@@ -508,8 +508,8 @@ span.total-effort::after,  {
 
 input.error, input.error:focus {
 	color: white;
-	border-color: red;
-	background:red;
+	border-color: $orange;
+	background:$orange;
 }
 /* -----------------------------------------
    Notification Styles
